<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Submit"
    android:background="#ECD1B3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:hint="Имя"
            android:inputType="textCapWords"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_field"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/test"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/add"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_name"
            android:layout_marginLeft="16dp"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/amount"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_name"
            android:layout_toRightOf="@+id/add"
            android:text="@string/amount"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/remove"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_name"
            android:layout_toRightOf="@+id/amount"
            android:text="@string/remove"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/submit_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:textColor="#ffffff"
            android:text="@string/order" />

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/toppings"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/vanilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toppings"
            android:layout_marginLeft="10dp"
            android:text="@string/vanilla"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vanilla"
            android:layout_marginLeft="10dp"
            android:text="@string/chocolate"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/caramel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chocolate"
            android:layout_marginLeft="10dp"
            android:text="@string/caramel"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>