<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECD1B3"
    tools:context=".Authorization">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/coffee_shop"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/coffeebean"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:src="@drawable/coffeebeans" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_marginTop="600dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:layout_marginTop="660dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

</RelativeLayout>