<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail"
    android:background="#ECD1B3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/rectangle">

        <TextView
            android:id="@+id/coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="200dp"
            android:text="@string/priceText"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/coffee_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200dp"
            android:layout_marginRight="16dp"
            android:text="@string/price"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/coffee_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_name"
            android:layout_margin="16dp"
            android:text="@string/info"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/submit_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:textColor="#ffffff"
            android:text="@string/order" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/coffee_image"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

</RelativeLayout>