<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/coffee_shop"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/coffee1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/coffee1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <xyz.hanks.library.bang.SmallBangView
                            android:id="@+id/heart1"
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/heart_selector" />

                        </xyz.hanks.library.bang.SmallBangView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/americano"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/coffee2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/coffee2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <xyz.hanks.library.bang.SmallBangView
                            android:id="@+id/heart2"
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/heart_selector" />

                        </xyz.hanks.library.bang.SmallBangView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cappuccino"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/coffee3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/coffee3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <xyz.hanks.library.bang.SmallBangView
                            android:id="@+id/heart3"
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/heart_selector" />

                        </xyz.hanks.library.bang.SmallBangView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cocktail"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/coffee4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/coffee4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <xyz.hanks.library.bang.SmallBangView
                            android:id="@+id/heart4"
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/heart_selector" />

                        </xyz.hanks.library.bang.SmallBangView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frappuccino"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="32dp"
                android:layout_marginTop="140dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp">

                    <ImageView
                        android:id="@+id/list"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_baseline_view_headline_24">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="240dp">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_baseline_account_box_24">
                    </ImageView>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>